--- a/style.css
+++ b/style.css
@@ -137,11 +137,10 @@ form .data-input #submit {
 }
 
 .result {
-  /* border: 1px solid darkslategray; */
   border-radius: 1rem;
   width: calc(100% - 60%);
   min-width: 400px;
-  height: 350px;
+  height: 300px;
   padding: 1rem 2rem;
   font-size: 3rem;
   box-shadow: 0 5px 5px darkslategray;
@@ -152,11 +151,25 @@ form .data-input #submit {
   /* gap: 1rem; */
 }
 
+.result p {
+  display: none;
+  width: 100%;
+  padding: 0.5rem;
+  margin-bottom: 0.75rem;
+  border-radius: 1rem;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+}
+
+.result p:last-child {
+  margin-bottom: 0;
+}
+
 .refresh {
+  margin-top: 1rem;
   background-color: darkslategray;
   padding: 0.5rem;
   color: #fff;
-  font-size: 1rem;
+  font-size: 0.75rem;
   font-weight: 400;
   border: none;
   border-radius: 0.25rem;
@@ -231,15 +244,20 @@ form .data-input #submit {
   }
 
   .result {
-    /* border: 1px solid darkslategray; */
     border-radius: 1rem;
     min-width: 300px;
-    height: 350px;
+    height: 250px;
     padding: 3rem 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 2rem;
+  }
+
+  .result p {
+    text-align: left;
+    border: 1 px solid blue;
   }
 
   .refresh {
