--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ form .data-input #submit {
     border-radius: 1rem;
     min-width: 300px;
     height: 250px;
-    padding: 3rem 2rem;
+    padding: 2rem 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -256,8 +256,9 @@ form .data-input #submit {
   }
 
   .result p {
+    width: 100%;
     text-align: left;
-    border: 1 px solid blue;
+    font-size: 1.5rem;
   }
 
   .refresh {
